# web-scraping-async

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  main.py  scrape_async.py  scrape_w_sess.py
tests/: app_test.py  main_test.py  scrape_test.py
