[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Sribarrow <sribarrow@gmail.com>"]
readme = "README.md"
# packages = [
# -     { include = "my_package" },
# +     { include = "my_package", from = "src" },
#   ]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

# [tool.poetry.scripts]
# run_main = "python_template_repo.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
