[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Sribarrow <sribarrow@gmail.com>"]
readme = "README.md"
# packages = [
# -     { include = "my_package" },
# +     { include = "my_package", from = "src" },
#   ]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

# [tool.poetry.scripts]
# test = "coverage run -m pytest"
# cov = "coverage report -m"
# cov_report = "coverage html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
